Greenfoot/asteroids/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_05\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.1.jar;C:\Program Files\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1
-d
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java
<---- end of javadoc command ---->
Loading source file H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java...
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:105: error: illegal start of expression
    private void ignite(boolean boosterOn) 
    ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:105: error: illegal start of expression
    private void ignite(boolean boosterOn) 
            ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:105: error: ';' expected
    private void ignite(boolean boosterOn) 
                       ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:105: error: ';' expected
    private void ignite(boolean boosterOn) 
                                         ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:120: error: illegal start of expression
    private void fire() 
    ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:120: error: illegal start of expression
    private void fire() 
            ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:120: error: ';' expected
    private void fire() 
                     ^
H:\TEACHING MATERIAL\2012-2013 Classes\Introduction to Computer Science\GreenFoot\Chapter 1\Programs\asteroids1\Rocket.java:130: error: reached end of file while parsing
}
 ^
8 errors
